--- a/index.Rmd
+++ b/index.Rmd
@@ -20,3 +20,151 @@ WHERE teamID='NYA'and yearID=1927"
 sqldf(query)
 ```
 
+Find all instances where the Yankees have 40 homeruns or more.
+
+```{r}
+query<-"SELECT teamID, playerID, yearID, HR FROM Batting
+WHERE teamID='NYA' and HR>=40"
+sqldf(query)
+```
+
+Find all instances where a player had more than 40 homeruns and less than 60 strikeouts.
+
+```{r}
+query<-"SELECT teamID, playerID, yearID, HR, SO FROM Batting
+WHERE HR>40 and SO<60"
+sqldf(query)
+```
+
+Find all instances where the Phillies in the 1970s hitting more than 30 homeruns. 
+
+```{r}
+query<-"SELECT teamID, playerID, yearID, HR FROM Batting 
+WHERE teamID='PHI' and HR>30 and yearID>=1970 and yearID<=1979"
+sqldf(query)
+```
+
+## Order By
+
+With SQL, you can also order the rows in the output. For example, suppose you wanted to see every instance of a player hitting more than 50 homeruns. But you would like the players witht hte most homeruns to be at the top of this list. We could do this in the following way:
+
+```{r}
+query<-"SELECT playerID,yearID,teamID,HR from Batting 
+WHERE HR>50 
+Order by HR Desc"
+sqldf(query)
+```
+
+Find all instances of players striking out less than 10 times. Make sure each player has at least 400 at bats.
+
+```{r}
+query<-"SELECT playerID, teamID, yearID, SO, AB FROM Batting
+WHERE SO<10 and AB>=400
+ORDER BY SO"
+sqldf(query)
+```
+
+## Aggregation
+
+Aggregation allows you to group the information. It is done with the GROUP BY command. If you wanted to add a WHERE clause for within the group you must use the command HAVING after the GROUP BY command. Some important commands that also fall under this category include sum( ), avg( ), max( ), and min( ). Bellow are some examples:
+
+What is the total homeruns of Babe ruth?
+
+```{r}
+query<-"SELECT playerID, sum(HR) FROM Batting 
+WHERE playerID='ruthba01'
+GROUP BY playerID"
+sqldf(query)
+```
+
+
+Find the career homerun totals for all players, but list only those with a total of 600 or more. Order from greatest to least.
+
+```{r}
+query<-"SELECT playerID, sum(HR) FROM Batting
+GROUP BY playerID
+HAVING sum(HR)>=600
+ORDER BY sum(HR) DESC"
+sqldf(query)
+```
+
+What players have the highest average per season homerun totals? List only averages over 30.
+
+```{r}
+query<-"SELECT playerID, avg(HR) FROM Batting
+GROUP BY playerID
+HAVING avg(HR)>30
+ORDER BY avg(HR) DESC"
+sqldf(query)
+```
+
+## Joins
+
+The commands used for this action include INNER JOIN and ON. INNER JOIN allows you to connect two seperate tables. ON tells the program how to connect them.
+
+Find the first and last name, along with team, year, and homeruns. The only player should be Babe Ruth.
+
+```{r}
+query<-"SELECT nameFirst, nameLast, teamID, yearID, HR
+FROM Batting INNER JOIN Master
+ON Batting.playerID=Master.playerID
+WHERE Batting.playerID='ruthba01'"
+sqldf(query)
+```
+
+Find all instances of players hitting more than 50 homeruns. Include first name, last name, team, year, and homeruns. Order them from greates homeruns to least.
+
+```{r}
+query<-"SELECT nameFirst, nameLast, teamID, yearID, HR
+FROM Batting INNER JOIN Master
+ON Batting.playerID=Master.playerID
+WHERE HR>50
+ORDER BY HR DESC"
+sqldf(query)
+```
+
+Babe Ruth with playerID, team name, yearID, and homeruns. For this example we must join the tables at two spots otherwise there will be repeats.
+
+```{r}
+query<-"SELECT playerID, name, Batting.yearID, Batting.HR
+FROM Batting INNER JOIN Teams
+ON Batting.teamID=Teams.teamID and Batting.yearID=Teams.yearID
+WHERE playerID='ruthba01'"
+sqldf(query)
+```
+
+Babe Ruth: first and last name, team name, yearID, and homeruns.
+
+```{r}
+query<-"SELECT nameFirst, nameLast, name, Batting.yearID, Batting.HR 
+FROM (Batting INNER JOIN Master
+ON Batting.playerID=Master.playerID) INNER JOIN Teams
+ON Batting.teamID=Teams.teamID AND Batting.yearID=Teams.yearID
+WHERE Batting.playerID='ruthba01'"
+sqldf(query)
+```
+
+Lets get the career homerun totals for players. Limit the display to just those that hit at least 600 homeruns. Highest homerun total at the top. Include first and last names.
+
+```{r}
+query<-"SELECT nameFirst, nameLast, sum(HR)
+FROM Batting INNER JOIN Master
+ON Batting.playerID=Master.playerID
+GROUP BY Batting.playerID
+HAVING sum(HR)>=600
+ORDER BY sum(HR) DESC"
+sqldf(query)
+```
+
+List all players with the first name Bob who averaged more than one million dollars in salary over their career. Include the last name.
+
+```{r}
+query<-"SELECT nameFirst, nameLast, avg(salary)
+From (Batting INNER JOIN Master
+ON Batting.playerID=Master.playerID) INNER JOIN Salaries
+ON Batting.playerID=Salaries.playerID
+GROUP BY Batting.playerID
+HAVING nameFirst='Bob' and avg(salary)>1000000"
+sqldf(query)
+```
+
